--- a/index.html
+++ b/index.html
@@ -1,42 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <title>Wendi's Portfolio</title>
+    <meta charset ="utf-8">
+    <title>Wendis Page</title>
+    <link rel="stylesheet" type="text/css" href="stylesheet.css">
   </head>
-
   <body>
-
-    <nav>
-    <header><h1>Welcome to my page!</h1></header>
-    <h2>This is a list of some the work I have completed so far in HTML 100</h2>
-      <ul>
-        <li>first-repo file.txt</li>
-        <li>html-basics index.html</li>
-        <li>semantic-elements index.html</li>
-        <li>semantic-elements semantic-elements.html</li>
-        <li>html-basics sectioning-elements.html</li>
-        <li>html-basics images.html</li>
-      </ul>
-      </nav>
-
-      <article>
-        <h3>Project 1 Example:</h3>
-        <a href="file:///C:/Users/Wendi/Desktop/HTML100/semantic-elements/index.html">index.html</a>
-          <p><img src="https://farm1.staticflickr.com/39/118084267_806dc080c7.jpg" width="150" height="100" alt="A photo of a desktop computer with keyboard and mouse"></p>
-        <h3>Project 2 Example:</h3>
-        <p><a href="file:///C:/Users/Wendi/Desktop/HTML100/semantic-elements/semantic-elements.html">semantic-elements.html</a></p>
-        <p><img src="https://farm9.staticflickr.com/8757/16948980348_05771449e3_b.jpg" width="100" height="100" alt="A photo of a platter of delicious sushi"></p>
-      </article>
-
-      <section>
-          <h1><a href="file:///C:/Users/Wendi/Desktop/HTML100/portfolio/about-me.html">Learn more about me here</a></h1>
-      </section>
-
-      <footer>
-          <p>Created by Wendi Arnold on July 2, 2019</p>
-          <p>contact: <a href="mailto:wca.arnold@gmail.com"> wca.arnold@gmail.com</a>. </p>
-      </footer>
+    <h1>Welcome to my page!</h1>
+    <p class="bright">This is my first website using CSS!</p>
+    <p class="important lavender-text">Did you know that dogs are the best pet?</p>
+    <p id="lead-paragraph">More specifically, Labrador Retreivers, are the greatest.</p>
+    <p><img src="dogs.jpg" alt="A yellow lab and a chocolate lab sitting on a deck in front of some flowers" ></p>
+    <a id="link" href="https://www.petfinder.com/dog-breeds/">However, there are so many other breeds of dogs.</a>
+    <br>
+    <br>
+    <br>
+    <p>
+    <a id="link" href="https://www.lifeisgreat.nu">Need some inspiration?</a></p>
 
   </body>
-</html>
