--- a/mock-up.html
+++ b/mock-up.html
@@ -4,61 +4,80 @@
     <meta charset="utf-8">
       <title>lesson-04-mock1-kitties-to-go-mockup-lvl-1</title>
       <link rel="stylesheet" type="text/css" href="stylesheet-mockup.css">
+      <script src="https://kit.fontawesome.com/9d460111ba.js" crossorigin="anonymous"></script>
   </head>
 
   <body>
     <header>
+      <style>
+        @import url('https://fonts.googleapis.com/css?family=Kalam&display=swap');
+      </style>
           <h1>KITTIES TO GO!</h1>
-          <h2>Seattle’s premiere drive-thru
-            cat rentals</h2>
-            <div class="topnav">
-              <ul>About</ul>
-              <ul>Rates</ul>
-              <ul>Liability Release</ul>
-              <ul>Kitty Profiles</ul>
-              <ul>Book a Cat</ul>
+          <style>
+            @import url('https://fonts.googleapis.com/css?family=Big+Shoulders+Display:100&display=swap');
+          </style>
+          <h2>Seattle’s premiere drive-thru cat rentals</h2>        
+            <div class="top-box">
+            <ul style="list-style-type:none;">
+              <li>About</li>
+              <li>Rates</li>
+              <li>Liability Release</li>
+              <li>Kitty Profiles</li>
+              <li>Book a Cat</li>
+            </ul>
             </div>
     </header>
 
     <main>
       <section>
-        <h3>Cat ipsum dolor sit amet, find something else more interesting, so
-          catty ipsum mesmerizing birds sleep on my human’s head</h3>
-        <p>Cat ipsum dolor sit amet, find something else more interesting, so catty ipsum mesmerizing birds
-          sleep on my human’s head. Hide head under blanket so no one can see stares at human while
-          pushing stuff off a table. Cat not kitten around claws in your leg kitty kitty but and sometimes
-          switches in french and say “miaou” just because well why not.</p>
+        <div class="box">
+          <style>
+            @import url('https://fonts.googleapis.com/css?family=Didact+Gothic&display=swap');
+          </style>
+          <h3>Cat ipsum dolor sit amet, find something else more interesting, so
+            catty ipsum mesmerizing birds sleep on my human’s head</h3>
+          <p>Cat ipsum dolor sit amet, find something else more interesting, so catty ipsum mesmerizing birds
+            sleep on my human’s head. Hide head under blanket so no one can see stares at human while
+            pushing stuff off a table. Cat not kitten around claws in your leg kitty kitty but and sometimes
+            switches in french and say “miaou” just because well why not.</p>
+        </div>
           <br>
           <br>
-        <h3>Please stop looking at your phone an pet me. Lounge in the
+        <div class="small-box">
+        <h3>Please stop looking at your phone and pet me. Lounge in the
           doorway eat and then sleep on your face meowwww meowwww
           – Jeremy</h3>
+        </div>
           <br>
           <br>
-        <h3>THE KITTIES TO GO STORY</h3>
-        <p>Fall asleep on the washing machine snuggles up to shoulders or knees and purrs you to sleep.
-Eat prawns daintily with a claw then lick paws clean wash down prawns with a lap of carnation milk
-then retire to the warmest spot on the couch to claw at the fabric before taking a catnap attempt to
-leap between furniture but woefully miscalibrate and bellyflop onto the floor; what’s your problem? i
-meant to do that now i shall wash myself intently cough and swat at dog.
-Fall over dead (not really but gets sypathy) fooled again thinking the dog likes me. Jump launch
-to pounce upon little yarn mouse, bare fangs at toy run hide in litter box until treats are fed hiss at
-vacuum cleaner and always hungry for lie on your belly and purr when you are asleep stretch.</p>
+        <div class="large-box">
+          <h3>THE KITTIES TO GO STORY</h3>
+          <p>Fall asleep on the washing machine snuggles up to shoulders or knees and purrs you to sleep.
+            Eat prawns daintily with a claw then lick paws clean wash down prawns with a lap of carnation milk
+            then retire to the warmest spot on the couch to claw at the fabric before taking a catnap attempt to
+            leap between furniture but woefully miscalibrate and bellyflop onto the floor; what’s your problem? i
+            meant to do that now i shall wash myself intently cough and swat at dog.
+            Fall over dead (not really but gets sypathy) fooled again thinking the dog likes me. Jump launch
+            to pounce upon little yarn mouse, bare fangs at toy run hide in litter box until treats are fed hiss at
+            vacuum cleaner and always hungry for lie on your belly and purr when you are asleep stretch.</p>
+        </div>
       </section>
 
     <aside>
       <section>
+        <style>
+          @import url('https://fonts.googleapis.com/css?family=Didact+Gothic&display=swap');
+        </style>
         <h3 class="important grey-text">CATS IN THE NEWS</h3>
         <p class="important grey-text">Chew iPad power cord why must they do that, grab pompom in mouth and put in water dish.</p>
         <a href="#">Find out more >> </a>
         <p class="important grey-text">Chew iPad power cord why must they do that, grab pompom in mouth and put in water dish.</p>
         <a href="#">Find out more >> </a>
         <br>
-        <br>
       </section>
       <section>
         <h3 class="important grey-text">CAT OF THE WEEK</h3>
-            <img src="lesson04-mock3-sidebar-cat.jpg" width= "350" height= "300" alt="A grey and white stripped kitten with grey eyes"
+            <img src="lesson04-mock3-sidebar-cat.jpg" width= "150" height= "110" alt="A grey and white stripped kitten with grey eyes"
         <p class="important grey-text">Stare at imaginary bug love blinks and purr purr purr purr.</p>
         <a href="#">Book Now >> </a>
       </section>
@@ -68,13 +87,15 @@ vacuum cleaner and always hungry for lie on your belly and purr when you are asl
 
     <footer>
 				<p>Aborpos nisto inci tet aut que volupti beruptiberro to ex
-esseque invenienihil imaximu scideru ptistiusam consequunt</p>
+        esseque invenienihil imaximu scideru ptistiusam consequunt</p>
+        <i class="fas fa-cat fa-3x"></i>
+        <br>
         <br>
         <div class="bottomnav">
-            <ul>Footer link 1</ul>
-            <ul>Footer link 2</ul>
-            <ul>Footer link 3</ul>
-            <ul>Footer link 4</ul>
+            <ul><i class="fab fa-facebook-square fa-3x"></i></ul>
+            <ul><i class="fab fa-twitter fa-3x"></i></ul>
+            <ul><i class="fab fa-instagram fa-3x"></i></ul>
+            <ul><i class="fab fa-youtube fa-3x"></i></ul>
         <br>
         <br>
         <p>© 2018 Kitties To Go!, LLC | Seattle, WA</p>
