--- a/classes.html
+++ b/classes.html
@@ -69,15 +69,15 @@
     <div class="rightcolumn">
       <div class="right">
         <h2>Instructors</h2>
-        <img src="file:///C:/Users/Wendi/Desktop/HTML100/portfolio/instructor-bio-image1.png" width="110" height="110" alt="A black and white photo of an older man smiling and is wearing a zip up sweartshirt">
+        <img src="https://wcarnold.github.io/portfolio/instructor-bio-image1.png" width="110" height="110" alt="A black and white photo of an older man smiling and is wearing a zip up sweartshirt">
         <p>Derek Jenkins</p>
         <p>Derek is a Washington native and an experienced outdoorsman with many years hunting, fishing, skiing, canoeing, archery, shooting and minimalistic camping. His skillful mastery of bushcraft and wilderness survival knowledge helps define his character. He enjoys handcrafting his own long bows, flint knapped primitive arrows and making custom leather products.</p>
         <br>
-        <img src="file:///C:/Users/Wendi/Desktop/HTML100/portfolio/instructor-bio-image2.png" width="110" height="110" alt="A young woman with short hair and glasses smiling.">
+        <img src="https://wcarnold.github.io/portfolio/instructor-bio-image2.png" width="110" height="110" alt="A young woman with short hair and glasses smiling.">
         <p>Amy Smith</p>
         <p>Amy truly has a passion for archery. She comes from a long line of hunters, fisherman, and trappers of Canada. Amy  places a strong emphasis on safety and is enthusiastic about teaching. Amy also loves fitness, and  has been a YMCA group exercise and personal trainer for over 18 years.</p>
         <br>
-        <img src="file:///C:/Users/Wendi/Desktop/HTML100/portfolio/instructor-bio-image4.png" width="110" height="110" alt="A young man with dark hair, wearing a hat and smiling">
+        <img src="https://wcarnold.github.io/portfolio/instructor-bio-image4.png" width="110" height="110" alt="A young man with dark hair, wearing a hat and smiling">
         <p>Nathan Lee</p>
         <p>Nathan is an USA Archery Certified Level 3 NTS – Coach and has been teaching archery since 2009. He has been interested in archery since he nocked his first arrow while a Boy Scout at Scout camp. Nathan has many years of experience teaching people of all ages, experience gained as a Martial Arts Instructor and Studio Manager.</p>
   </div>
