--- a/classes.html
+++ b/classes.html
@@ -29,7 +29,7 @@
           @import url('https://fonts.googleapis.com/css?family=DM+Sans&display=swap');
         </style>
         <h4>Classes</h4>
-        <img src="file:///C:/Users/Wendi/Desktop/HTML100/portfolio/archeryAcademy-logo-color.png" width="250" height=" 150" alt="archery academy logo" class="center">
+        <img src="https://wcarnold.github.io/portfolio/archeryAcademy-logo-color.png" width="250" height=" 150" alt="archery academy logo" class="center">
           <h5>Name: A101 Basic Archery</h5>
 		          <p>Description: A101 is a basic archery course that focuses on beginning archery safety, skills, and drills. Participants learn about archery form, range rules and etiquette. Form training and fun games are introduced in this class.
               <br>
