--- a/lesson7.html
+++ b/lesson7.html
@@ -30,7 +30,7 @@
         </style>
         <h2>About Us</h2>
         <h5>How it all started...</h5>
-        <img src="file:///C:/Users/Wendi/Desktop/HTML100/portfolio/archeryAcademy-logo-color.png" width="250" height=" 150" alt="archery academy logo" class="center">
+        <img src="https://wcarnold.github.io/portfolio/archeryAcademy-logo-color.png" width="250" height=" 150" alt="archery academy logo" class="center">
         <p>	Giap Nguyen started Straight to the Point Archery in 2005. He's an avid and accomplished archer himself, having competed with the United States Archery Team in the 2000 Summer Olympics. He has three children, and  started Straight to the Point in part because he was not satisfied with the archery eduction options for them in Tacoma. After The Hunger Games books and movies came out, he noticed a surge in popularity of archery among young people, especially young women, and the business has been booming ever since.</p>
       </div>
       <div class="left">
