--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
           @import url('https://fonts.googleapis.com/css?family=DM+Sans&display=swap');
         </style>
         <h3>Contact Us</h3>
-        <img src="file:///C:/Users/Wendi/Desktop/HTML100/portfolio/archeryAcademy-logo-color.png" width="250" height=" 150" alt="archery academy logo" class="center">
+        <img src="https://wcarnold.github.io/portfolio/archeryAcademy-logo-color.png" width="250" height=" 150" alt="archery academy logo" class="center">
           <p>Straight to the Point Archery</p>
           <p>528 Nock Point Ln</p>
           <p>Tacoma, WA 98412</p>
