--- a/contact.html
+++ b/contact.html
@@ -16,10 +16,10 @@
   </div>
 
   <div class="topnav">
-    <a href="file:///C:/Users/Wendi/Desktop/HTML100/portfolio/lesson7.html">Home</a>
-    <a href="file:///C:/Users/Wendi/Desktop/HTML100/portfolio/classes.html">Classes</a>
+    <a href="https://wcarnold.github.io/portfolio/lesson7.html">Home</a>
+    <a href="https://wcarnold.github.io/portfolio/classes.html">Classes</a>
     <a href="#">Lessons</a>
-    <a href="file:///C:/Users/Wendi/Desktop/HTML100/portfolio/contact.html">Contact</a>
+    <a href="https://wcarnold.github.io/portfolio/contact.html">Contact</a>
   </div>
 
   <div class="row">
