--- a/classes1.html
+++ b/classes1.html
@@ -3,7 +3,6 @@
   <head>
     <title>Straight to the Point</title>
       <meta charset="UTF-8">
-      <link rel="stylesheet" type="text/css" href="lesson7-stylesheet.css">
 
   <body>
 
@@ -16,10 +15,10 @@
   </div>
 
   <div class="topnav">
-    <a href="https://wcarnold.github.io/portfolio/lesson7.html">Home</a>
-    <a href="https://wcarnold.github.io/portfolio/classes.html">Classes</a>
+    <a href="https://wcarnold.github.io/portfolio/lesson7-nostyle">Home</a>
+    <a href="https://wcarnold.github.io/portfolio/classes1">Classes</a>
     <a href="#">Lessons</a>
-    <a href="https://wcarnold.github.io/portfolio/contact.html">Contact</a>
+    <a href="https://wcarnold.github.io/portfolio/contact1">Contact</a>
   </div>
 
   <div class="row">
