--- a/lesson7-nostyle.html
+++ b/lesson7-nostyle.html
@@ -15,10 +15,10 @@
   </div>
 
   <div class="topnav">
-    <a href="#">Home</a>
-    <a href="#">Classes</a>
+    <a href="https://wcarnold.github.io/portfolio/lesson7-nostyle">Home</a>
+    <a href="https://wcarnold.github.io/portfolio/classes1">Classes</a>
     <a href="#">Lessons</a>
-    <a href="#">Contact</a>
+    <a href="https://wcarnold.github.io/portfolio/contact1">Contact</a>
   </div>
 
   <div class="row">
